2007-12-07: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm, lib/Mail/DKIM/Common.pm: initialize
   signatures early.  This patch makes Mail::DKIM::Verifier initialize
   and check the signature object as soon as it is parsed, and
   subsequent headers are fed into the algorithm as they are read,
   instead of waiting for the end of header.

2007-12-07: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm (add_signature): changed to take a
   signature object, instead of an unparsed header line

2007-11-21: Jason Long <jlong@messiah.edu>
 * t/corpus/bad_dk_2.txt renamed to dk_headers_2.txt: revert this
   rename from earlier... the message should "pass" after
   all (the Sender header was not part of the signature)

2007-11-21: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: provide documentation for Key parameter
 * lib/Mail/DKIM/PrivateKey.pm: created documentation for this package
 * lib/Mail/DKIM/Signature.pm: implement Key parameter for constructor,
   and key() method to get/set the private key

2007-11-14: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm: for DomainKeys signatures, use the message
   sender as the identity
 * lib/Mail/DKIM/DkSignature.pm: allow verifier to supply the signing
   identity
 * lib/Mail/DKIM/Verifier.pm, PublicKey.pm: hack for allowing
   DomainKeys signatures to use public keys with empty g= tags

2007-11-14: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm, Signer.pm: update documentation for
   message_sender() and message_originator() methods, which are now
   guaranteed to return an object
 * lib/Mail/DKIM/Common.pm (message_sender, message_originator):
   always return a Mail::Address object, even if the relevant headers
   were not found
 * t/corpus/dk_headers_2.txt renamed to bad_dk_2.txt: it turns out this
   message should've been failing all along, since the Sender header
   doesn't match the domain of the signature